- shop detail page item 조회 최적화 및 entity -> dto 변경

--- a/src/main/resources/templates/shop/itemAddForm.html
+++ b/src/main/resources/templates/shop/itemAddForm.html
@@ -58,9 +58,9 @@
                                     <div class="row align-items-center">
                                         <div class="col text-start">
                                 <input class="form-check-input" type="checkbox" name="extraItemId"
-                                       th:id="${it.id}" th:value="${it.id}"
+                                       th:id="${it.itemId}" th:value="${it.itemId}"
                                        >
-                                <label class="form-check-label" th:for="${it.id}"
+                                <label class="form-check-label" th:for="${it.itemId}"
                                        th:text="${it.itemName}">
                                     추가 아이템
                                 </label>
