--- a/src/main/resources/templates/top_menu.html
+++ b/src/main/resources/templates/top_menu.html
@@ -29,8 +29,8 @@
 								<a class="nav-link" th:if="${session.member_id != null}" th:href="@{/orders}">주문내역</a>
 							</li>
 							<li class="nav-item" style="width: 95px;" th:if="${session.member_id != null}">
-								<a class="nav-link" th:if="${session.member_id != null and shopId != null}" th:href="@{/shopDetail(num = ${shopId})}" >장바구니<span  th:text="|(${cartCount})|">99+</span></a>
-								<a class="nav-link" th:if="${session.member_id != null and shopId == null}" >장바구니<span  th:text="|(${cartCount})|">99+</span></a>
+								<a class="nav-link" th:if="${session.member_id != null and cartInfo.shopId != null}" th:href="@{/shopDetail(num = ${cartInfo.shopId})}" >장바구니<span  th:text="|(${cartInfo.cartCount})|">99+</span></a>
+								<a class="nav-link" th:if="${session.member_id != null and cartInfo.shopId == null}" >장바구니<span  th:text="|(${cartInfo.cartCount})|">99+</span></a>
 							</li>
 						</ul>
 					</div>
