--- a/src/main/resources/templates/order/orderDetail.html
+++ b/src/main/resources/templates/order/orderDetail.html
@@ -34,7 +34,7 @@
             <section class="order-container">
                 <div class="order-details">
                     <H4 class="delivery-status" th:text="${order.orderStatus}"></H4>
-                    <h1 class="restaurant-name" th:text="${order.shop.shopName}">음식점</h1>
+                    <h1 class="restaurant-name" th:text="${order.shopName}">음식점</h1>
                     <div class="order-summary" th:text="${orderItems}">주문 메뉴 및 수량 요약</div>
                     <div class="order-datetime"
                          th:text="${#temporals.format(order.orderDate, 'yyyy년 MM월 dd일 (E) a hh:mm')}">주문일시 : 2024년 4월
@@ -43,7 +43,7 @@
                     <div class="order-number" th:text="|주문번호 : ${order.id}|">주문번호 : 0000</div>
                 </div>
                 <div class="button-container">
-                <button class="btn btn-primary" th:onclick="'window.location.href=\'/shopDetail?num=' + ${order.shop.shopId} + '\''">음식점 보기</button>
+                <button class="btn btn-primary" th:onclick="'window.location.href=\'/shopDetail?num=' + ${order.shopId} + '\''">음식점 보기</button>
                 <button class="btn btn-primary" th:onclick="|window.location.href='@{/orders/{id}/reorder(id=${order.id})}'|">재주문</button>
                 <div th:if="${order.orderStatus.toString() == '결제 준비' or order.orderStatus.toString() == '결제완료' or order.orderStatus.toString() == '주문확인중'}" th:switch="${order.paymentMethod}">
                     <button th:case="'kakaoPay'" class="btn btn-primary" th:onclick="|window.location.href='@{/order/kakao/cancel(orderId=${order.id})}'|">주문취소</button>
@@ -62,18 +62,17 @@
             <section class="order-container">
                 <h3>주문 상세 내역</h3>
                 <div class="order-item" th:each="orderItem: ${order.orderItems}">
-                    <h5 class="order-items-title" th:text="|${orderItem.item.itemName} ${orderItem.quantity}개|">주문 메뉴 및
+                    <h5 class="order-items-title" th:text="|${orderItem.itemName} ${orderItem.quantity}개|">주문 메뉴 및
                         수량(상세)</h5>
                     <div class="base-price"
-                         th:text="|기본 : ${#numbers.formatDecimal(orderItem.item.itemPrice, 0, 'COMMA', 0, 'POINT')}원|">기본 :
+                         th:text="|기본 : ${#numbers.formatDecimal(orderItem.itemPrice, 0, 'COMMA', 0, 'POINT')}원|">기본 :
                         10,000원
                     </div>
-                    <div class="option-price" th:if="${orderItem.orderItemOptions!=null}"
-                         th:text="|${orderItem.orderItemOptions.get(0).itemOption.content} : ${#numbers.formatDecimal(orderItem.orderItemOptions.get(0).itemOption.price, 0, 'COMMA', 0, 'POINT')}원|">
-                        기본 : 10,000원
+                    <div class="option-price" th:each="orderItemOption: ${orderItem.orderItemOptions}">
+                        <div th:text="|${orderItemOption.content} : ${#numbers.formatDecimal(orderItemOption.price, 0, 'COMMA', 0, 'POINT')}원|">기본 : 10,000원</div>
                     </div>
                     <div class="total-price"
-                         th:text="|합계 : ${#numbers.formatDecimal(orderItem.price , 0, 'COMMA', 0, 'POINT')}원|">
+                         th:text="|합계 : ${#numbers.formatDecimal(orderItem.itemPrice , 0, 'COMMA', 0, 'POINT')}원|">
                         총 합계: 20,000원
                     </div>
                 </div>
@@ -101,7 +100,7 @@
                 <section class="payment-method-container3">
                     <h5 class="payment-method-title">총 결제 금액</h5>
                     <h5 class="payment-method"
-                        th:text="|${#numbers.formatDecimal(order.totalPrice + order.orderPrice - order.discount, 0, 'COMMA', 0, 'POINT')}원|">
+                        th:text="|${#numbers.formatDecimal(order.price, 0, 'COMMA', 0, 'POINT')}원|">
                         23,000원</h5>
                 </section>
                 <section class="payment-method-container">
