- review 패키지 정리 및 reviewPic 테이블 분리 사진 여러장 업로드 가능하게 변경 리뷰 등록 기능 수정

--- a/src/main/resources/templates/thymeleaf/review/reviewFormPage.html
+++ b/src/main/resources/templates/thymeleaf/review/reviewFormPage.html
@@ -77,7 +77,7 @@
                             <p>직접 촬영한 음식을 업로드해주세요</p>
                         </label>
                         <div class="mb-3">
-                            <input type="file" class="form-control" id="image-upload" name="file">
+                            <input type="file" multiple="multiple" class="form-control" id="image-upload" name="files">
                         </div>
 
                     </div>
