- ReviewController 컨트롤러 단에서는 최대한 request 처리만 담당하고 비지니스 로직은 service 단으로 넘김

--- a/src/main/resources/templates/thymeleaf/review/reviewMypageList.html
+++ b/src/main/resources/templates/thymeleaf/review/reviewMypageList.html
@@ -68,7 +68,7 @@
 										</div>
 									</div>
 									<div class="review-comment" data-tooltip="눌러서 수정하기">
-										<a th:href="@{reviewMypageSelectOne(reviewId=${vos.reviewId}, userId=${vos.userId}, shopName=${vos.shopName}, memberId=${param.memberId})}">
+										<a th:href="@{reviewMypageSelectOne(reviewId=${vos.reviewId})}">
 											<span th:text="${vos.reviewComent}"></span>
 										</a>
 									</div>
