--- a/src/main/resources/templates/thymeleaf/review/reviewMypageOne.html
+++ b/src/main/resources/templates/thymeleaf/review/reviewMypageOne.html
@@ -53,7 +53,7 @@
 
 								<div class="card-body">
 									<a th:href="@{'/shopDetail?num=' + ${vo.shopId}}">
-										<h4 class="card-title" th:text="|${param.shopName}  >|"></h4>
+										<h4 class="card-title" th:text="|${param.shopName}  |"></h4>
 									</a>
 									<div style="display: none;"><span th:text="${vo.reviewId}"></span></div>
 
@@ -95,7 +95,7 @@
 
 
 
-			<a class="review-update-btn" th:href="@{reviewMypageUpdateOne(reviewId=${vo.reviewId}, shopName=${param.shopName}, userId=${vo.userId}, memberId=${param.memberId})}">리뷰 수정하기</a>
+			<a class="review-update-btn" th:href="@{reviewMypageUpdateOne(reviewId=${vo.reviewId})}">리뷰 수정하기</a>
 			<button class="btn btn-danger" onclick="deleteReview('${vo.reviewId}', '${vo.userId}', '${param.memberId}')">리뷰 삭제하기</button>
 
 			<a style="background-color:#adb5bd;" class="review-update-btn" th:href="@{review_Mypage(memberId=${param.memberId})}">나의 리뷰 목록</a>
